<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Camera Secret</string>
    <string name="title_settings">Setting</string>
    <string name="video_setting">VIDEO SETTING</string>
    <string name="video_camera">Video camera</string>
    <string name="video_quality">Video quality</string>
    <string name="duration">Duration</string>
    <string name="use_camera">Use camera</string>
    <string name="switch_string">Switch</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="save">SAVE</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="loading">Loading...</string>
    <string name="tap_to_open">Tap to open now</string>
    <string name="camera_running">Camera service is running</string>
    <string name="orientation">Orientation</string>
    <string name="slient_record">Silent record</string>
    <string name="check_free">Check free storage</string>
    <string name="show_notifi">Show notification</string>
    <string name="feedback">Feedback</string>
    <string name="contact">CONTACT</string>
    <string name="advance">ADVANCE</string>
    <string name="display">DISPLAY</string>
    <string name="warning">Warning</string>
    <string name="confirm">Confirm</string>
    <string name="setting">Setting</string>
    <string name="do_you_want_delete">Do you want to delete video?</string>
    <string name="msg_rename_video">Please select only one item to rename it!</string>
    <string name="record_by_sms">Record by SMS</string>
    <string name="select_item_to_delete">Please select item to delete!</string>
    <string name="audio_source">Audio source</string>
    <string name="record_duration">Recording duration</string>
    <string name="summary_slient">Video will have no sound. It could save your videos size</string>
    <string name="need_permission">We need permission for use camera secret!</string>
    <string name="low_memory">Your moblie is low on memory!</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="note_change_cam">Note: Change camera type does not effect the global setting</string>
    <string name="tap_to_set_time">Tap to set time for automatically record</string>
    <string name="rename">Rename</string>
    <string name="input_here">Input here</string>
    <string name="video_name">Video Name</string>
    <string name="min">min</string>
    <string name="folder">Folder</string>
    <string name="summary_sms1">Start recording by sending message </string>
    <string name="summary_sms2"> to this phone. To stop recording, re-send this message.</string>
    <string name="summary_notify">Nofification will be shown when recording</string>
    <string name="summary_low_memory">Recording will stop if low available storage</string>
    <string name="summary_feedback">Rate and feedback us for better version</string>
    <string name="input_wrong">Input wrong</string>
    <string name="str_share_this_video">Share to</string>
    <string name="warring_share">Please select only one item to share it!</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="you_have">You have</string>
    <string name="should_clear_data"> available external memory. You should clear data!</string>
    <string name="any_number">Any number</string>
    <string name="sender">Sender</string>
    <string name="set_sender">Set Sender Number</string>

    <string name="ad_unit_banner">ca-app-pub-9637534910666933/1453542200</string>
    <string name="ad_unit_full">ca-app-pub-9637534910666933/2930275409</string>

    <string name="ad_fb_banner">324388531330350_324388797996990</string>
    <string name="ad_fb_full">324388531330350_324388877996982</string>

    <string name="exit_app">Exit application !</string>
    <string name="rate">Rate app</string>
    <string name="hint">Give us 5 stars !</string>
    <string name="exit">Exit</string>
    <string name="cant_use_sms_record">You can\'t use this sms record</string>
    <string name="record_success">Record Video Success</string>
    <string name="click_to_record">Click To Record</string>
    <string name="click_to_stop">Click To Stop</string>
    <string name="internal_media">Interal media player</string>
    <string name="use_internal">Use internal media player to play recordings</string>
    <string name="low_memory_cant_save">Your moblie is too low on memory! Can\'t save video recorder</string>
</resources>
