<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:title="Option"
        app:showAsAction="ifRoom|withText">

        <menu>
            <item
                android:id="@+id/action_select_all"
                android:icon="@drawable/ic_select_all"
                android:title="@string/select_all"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_rename"
                android:icon="@drawable/ic_edit"
                android:title="@string/rename"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>
